tests/cases/errors/missing_quote.b
REM Test: Unterminated string literal (should fail)
PRINT "unterminated
